--- a/addons/pvr.dvblink/project/VS2010Express/pvrclient_dvblink.vcxproj
+++ b/addons/pvr.dvblink/project/VS2010Express/pvrclient_dvblink.vcxproj
@@ -41,14 +41,14 @@
     <OutDir>..\..\addon\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <TargetExt>.dll</TargetExt>
+    <TargetExt>.pvr</TargetExt>
     <TargetName>XBMC_DVBLink_win32</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>..\..\addon\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <TargetExt>.dll</TargetExt>
+    <TargetExt>.pvr</TargetExt>
     <TargetName>XBMC_DVBLink_win32</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
