--- a/addons/pvr.dvblink/addon/addon.xml.in
+++ b/addons/pvr.dvblink/addon/addon.xml.in
@@ -21,7 +21,7 @@
     <description lang="en">PVR Plugin for DVBLink from DvbLogic.com; supporting streaming of Live TV &amp; Recordings, EPG, Timers</description>
     <description lang="de">PVR Plugin für DVBLink Connect! Server von DvbLogic.com; Unterstützt Streaming von Live TV &amp; Aufzeichnungen, EPG, Timern</description>
     <disclaimer lang="en">This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects..</disclaimer>
-    <disclaimer lang="de">Das ist unfertige Software! Die Autoren übernehmen keine Haftung für fehlgeschlagene Aufzeichnungen, falsche Timer, oder andere unvorhersehbare Effekte..</disclaimer>
+    <disclaimer lang="de">Das ist unfertige Software!! Die Autoren übernehmen keine Haftung für fehlgeschlagene Aufzeichnungen, falsche Timer, oder andere unvorhersehbare Effekte..</disclaimer>
     <platform>@OS@</platform>
   </extension>
 </addon>
